# arrayfire_test

./: CMakeLists.txt  main.cpp
